--- a/devlog/next-portfolio.mdx
+++ b/devlog/next-portfolio.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'NextJS Portfolio'
 date: '2022-01-23'
-thumbnail: '/../public/images/devlog/thumbnails/portfolio.jpg'
+thumbnail: 'portfolio.jpg'
 ---
 
 I grew bored of my old, basic portfolio site, using Bootstrap as my framework, and so I elected to finally begin to learn how to create web apps via Node JS. I have created this website as its replacement using Next.JS (and therefore React), Chakra UI and Framer Motion to create an aesthetically pleasing front end. The project has served as an excellent introduction to building my own web apps, as I have experimented with many different techniques and features as well as understanding better the advantages of creating JavaScript based sites rendered by the frameworks, rather than the incredibly static basic HTML and CSS design method.  
